@@ -1,3 +1,7 @@
+2004-05-14  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
+
+	* som.c (log2): Rename to exact_log2.  Adjust all callers.
+
 2004-05-13  Paul Brook  <paul@codesourcery.com>
 
 	* elf-eh-frame.c (_bfd_elf_discard_section_eh_frame): Handle
